[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/Fonts/candles_.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://src/UI/Menu/MenuBtn.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/Screens/EndScreen.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 60
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = ExtResource( 1 )

[node name="EndScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0.0509804, 0.14902, 1 )

[node name="Title" type="Label" parent="Background"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -511.5
margin_top = 32.0
margin_right = 511.5
margin_bottom = 77.0
custom_colors/font_color = Color( 0.121569, 0.658824, 0.729412, 1 )
custom_fonts/font = SubResource( 1 )
text = "Shooter Game"
align = 1
valign = 1

[node name="Container" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MenuContainer" type="VBoxContainer" parent="Container"]
margin_left = 595.0
margin_top = 405.0
margin_right = 845.0
margin_bottom = 674.0
custom_constants/separation = 25

[node name="ScoreLabel" type="Label" parent="Container/MenuContainer"]
margin_right = 250.0
margin_bottom = 64.0
custom_colors/font_color = Color( 0.486275, 0.862745, 0.74902, 1 )
custom_fonts/font = SubResource( 2 )

[node name="Control" type="Control" parent="Container/MenuContainer"]
margin_top = 89.0
margin_right = 250.0
margin_bottom = 89.0

[node name="RetryBtn" parent="Container/MenuContainer" instance=ExtResource( 2 )]
margin_top = 114.0
margin_right = 250.0
margin_bottom = 179.0
rect_min_size = Vector2( 250, 65 )
size_flags_horizontal = 6
text = "Retry Game"

[node name="MainMenuBtn" parent="Container/MenuContainer" instance=ExtResource( 2 )]
margin_top = 204.0
margin_right = 250.0
margin_bottom = 269.0
rect_min_size = Vector2( 250, 65 )
size_flags_horizontal = 6
text = "Main Menu"

[connection signal="pressed" from="Container/MenuContainer/RetryBtn" to="." method="_on_RetryBtn_pressed"]
[connection signal="pressed" from="Container/MenuContainer/MainMenuBtn" to="." method="_on_MainMenuBtn_pressed"]
